--- a/package.json
+++ b/package.json
@@ -4,9 +4,22 @@
   "description": "A shareable configuration of Give Livelys Eslint Rules",
   "main": "index.js",
   "repository": "git@github.com:givelively/eslint_config.git",
-  "author": "Christian Lowe <christglowe@gmail.com>",
+  "author": "Christian Lowe (https://github.com/TheBrotherFromASouthernMother)",
   "license": "MIT",
+  "keywords": [
+    "eslint",
+    "eslintconfig",
+    "config",
+    "givelively",
+    "javascript"
+  ],
+  "scripts": {
+    "lint": "eslint ."
+  },
   "peerDependencies": {
-    "@babel/eslint-parser": ">=7"
+    "eslint": ">=8"
+  },
+  "devDependencies": {
+    "eslint": "^8.11.0"
   }
 }
