--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "lint": "eslint ."
   },
   "peerDependencies": {
-    "eslint": ">=8"
+    "eslint": ">=8",
+    "eslint-plugin-jest": ">=27.5.0",
+    "eslint-plugin-jsx-a11y": ">=6.5.1",
+    "eslint-plugin-react-hooks": ">=4.5.0",
+    "eslint-plugin-react": ">=7.29.4"
   },
   "devDependencies": {
     "eslint": "^8.11.0"
