--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-give-lively",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "A shareable configuration of Give Livelys Eslint Rules",
   "main": "index.js",
   "repository": "git@github.com:givelively/eslint_config.git",
@@ -20,8 +20,8 @@
     "eslint": ">=8",
     "eslint-plugin-jest": ">=27.5.0",
     "eslint-plugin-jsx-a11y": ">=6.5.1",
-    "eslint-plugin-react-hooks": ">=4.5.0",
-    "eslint-plugin-react": ">=7.29.4"
+    "eslint-plugin-react": ">=7.29.4",
+    "eslint-plugin-react-hooks": ">=4.5.0"
   },
   "devDependencies": {
     "eslint": "^8.11.0"
